Hover-Effekte und Bookmarks  hinzugefügt, Bugfixes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Work Responsibly</title>
   </head>
   <body>
-    <header>
+    <header id="top">
       <div class="header-container">
         <nav>
           <ul class="navbar">
@@ -25,7 +25,7 @@
             approach to work.
           </p>
         </section>
-        <ul>
+        <ul class="socialmedia_icons">
           <li>
             <a href="https://www.twitter.com"
               ><img src="./assets/icons/Twitter.png" alt=""
@@ -42,7 +42,9 @@
             /></a>
           </li>
         </ul>
-        <a href="#" class="header_link">↓ Browse topics and resources</a>
+        <a href="#resources" class="header_link"
+          >↓ Browse topics and resources</a
+        >
       </div>
     </header>
     <hr />
@@ -64,7 +66,7 @@
         </section>
       </div>
       <hr />
-      <div class="main_container">
+      <div class="main_container" id="resources">
         <h2 class="subheading">Features resources</h2>
         <section class="section_resources">
           <article class="article_left">
@@ -110,7 +112,7 @@
     </main>
     <hr />
     <footer>
-      <a href="#" class="all_catagories_btn">⬆ Browse all categories</a>
+      <a href="#top" class="all_catagories_btn">⬆ Browse all categories</a>
       <p class="copyright">© 2019</p>
     </footer>
   </body>
